cmake_minimum_required(VERSION 3.21)
project(acwing)

set(CMAKE_CXX_STANDARD 14)
add_executable(merge_sort_answer 01_class/02merge_sort_answer.cpp)
add_executable(quick_sort_answer 01_class/01quick_sort_answer.cpp)
add_executable(bsearch 01_class/03bsearch_answer.cpp)
add_executable(bsearch_shu_de_fan_wei 01_class/03bsearch_shu_de_fan_wei.cpp)
add_executable(float_bsearch_kaipingfang 01_class/03float_bsearch_kaipingfang.cpp)
add_executable(large_number_addition 02_class/01large_number_addition.cpp)
add_executable(02large_number_subtraction 02_class/02large_number_subtraction.cpp)
add_executable(03large_number_multiplication 02_class/03large_number_multiplication.cpp)
add_executable(large_number_division 02_class/04large_number_division.cpp)
add_executable(05qianzhuihe 02_class/05yiwei_qianzhuihe.cpp)
add_executable(06erwei_qianzhuihe 02_class/06erwei_qianzhuihe.cpp)
add_executable(06chafen 02_class/07chafen.cpp)
add_executable(07erweichaifen 02_class/08erweichaifen.cpp)
add_executable(01shuang_zhi_zhen 03_class/01shuang_zhi_zhen.cpp)
add_executable(02shuang_zhi_zhen_buchongfu 03_class/02shuang_zhi_zhen_buchongfu.cpp)
add_executable(03erjinzhi 03_class/03erjinzhi.cpp)
add_executable(04yi_de_ge_shu 03_class/04yi_de_ge_shu.cpp)
add_executable(05fan_ma 03_class/05bu_ma.cpp)
add_executable(06qu_jian_he 03_class/06qu_jian_he.cpp)
add_executable(07qu_jian_he_bing 03_class/07qu_jian_he_bing.cpp)
add_executable(01dan_lian_biao 04_class/01dan_lian_biao.cpp)
add_executable(02shuang_lian_biao 04_class/02shuang_lian_biao.cpp)
add_executable(03zhan 04_class/03zhan.cpp)
add_executable(04dui_lie 04_class/04dui_lie.cpp)
add_executable(05dan_diao_zhan 04_class/05dan_diao_zhan.cpp)
add_executable(06dan_diao_dui_lie 04_class/06dan_diao_dui_lie.cpp)
add_executable(07kmp 04_class/07kmp.cpp)
add_executable(01_Trie 05_class/01_Trie.cpp)
add_executable(02_he_bing_jin_he 05_class/02bing_cha_ji.cpp)
add_executable(03lian_tong_kuai_dian_shu_liang 05_class/03lian_tong_kuai_dian_shu_liang.cpp)
add_executable(04dui 05_class/04dui.cpp)
add_executable(05mo_ni_dui 05_class/05mo_ni_dui.cpp)
add_executable(02ha_xi_biao_kaifang 06_class/02ha_xi_biao_kaifang.cpp)
add_executable(01ha_xi_biao_lalian 06_class/01ha_xi_biao_lalian.cpp)
add_executable(03zifuchuan_haxi 06_class/03zifuchuan_haxi.cpp)
add_executable(stl 06_class/stl.cpp)
add_executable(01pailie_shuzi 07_class/01pailie_shuzi.cpp)
add_executable(02N_huanghou_wenti 07_class/02N_huanghou_wenti.cpp)
add_executable(01test 01test.cpp)
add_executable(01qujian_xuandian 17_class/01qujian_xuandian.cpp)
add_executable(02zuida_buxiangjiao 17_class/02zuida_buxiangjiao.cpp)
add_executable(03qujian_fenzu 17_class/03qujian_fenzu.cpp)
add_executable(04qujian_fugai 17_class/04qujian_fugai.cpp)
add_executable(05hebing_guozi 17_class/05hebing_guozi.cpp)
add_executable(01paidui_da_shui 18_class/01paidui_da_shui.cpp)
add_executable(02huocang_xuanzhi 18_class/02huocang_xuanzhi.cpp)
add_executable(03shuazaji_deniu 18_class/03shuazaji_deniu.cpp)
add_executable(03N_huanghou_wenti2 07_class/03N_huanghou_wenti2.cpp)
add_executable(04zou_migong 07_class/04zou_migong.cpp)
add_executable(05shude_zhongxin 07_class/05shude_zhongxin.cpp)
add_executable(06tuzhongdiande_cengci 07_class/06tuzhongdiande_cengci.cpp)
add_executable(07tuopu_xulie 07_class/07tuopu_xulie.cpp)
add_executable(01pusu_Dijkstra 08_class/01pusu_Dijkstra.cpp)
add_executable(02dui_Dijkstra 08_class/02dui_Dijkstra.cpp)
add_executable(0101bag 14_class/01_01bag.cpp)
add_executable(0201bag_better 14_class/02_01bag_better.cpp)
add_executable(03wanquan_beibao 14_class/03wanquan_beibao.cpp)
add_executable(04wanquan_beibao_better 14_class/04wanquan_beibao_better.cpp)
add_executable(05wanquan_beibao_best 14_class/05wanquan_beibao_best.cpp)
add_executable(06dochong_beibao 14_class/06dochong_beibao.cpp)
add_executable(07duochong_beibao_better 14_class/07duochong_beibao_better.cpp)